--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ body {
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 80vh;
+    height: 637px;
+    display: flex;
+    flex-direction: column;
 }
 
 .nav {
@@ -47,6 +49,21 @@ body {
     padding-top: 38px;
 }
 
+.button-right {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 78px;
+}
+
 .primary-button {
-   
+    border: 1px solid var(--white);
+    background-color: transparent;
+    color: var(--white);
+    min-width: 200px;
+    height: 61px;
+    padding: 20px 58px;
+    font-size: 16px;
+    cursor: pointer;
+    justify-content:center;
+    display: flex;
 }
