--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,14 @@ body {
 }
 
 .site-content {
-    padding-left: 78px;
-    padding-right: 78px;
+   margin-left: 78px;
+   margin-right: 78px;
 }
 
 .headline {
     font-weight: 400;
     font-size: 70px;
     color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
     max-width: 792px;
     line-height: 120%;
 }
@@ -31,8 +29,6 @@ body {
     background-position: center;
     width: 100%;
     height: 637px;
-    display: flex;
-    flex-direction: column;
 }
 
 .nav {
@@ -41,15 +37,16 @@ body {
     align-items:flex-start;
 }
 
-.nav .burger-menu {
+.burger-menu {
     padding-top: 43px;
 }
+
 
 .nav .logo {
     padding-top: 38px;
 }
 
-.button-right {
+  .button-right {
     display: flex;
     justify-content: flex-end;
     margin-top: 78px;
@@ -66,4 +63,27 @@ body {
     cursor: pointer;
     justify-content:center;
     display: flex;
+}  
+
+.overlap-container {
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.woman-image {
+    max-width: 682px;
+    max-height: 737px;
+}
+
+.necklace {
+    max-width: 270px;
+    max-height: 246px;
+    margin-left: -100px;
+}
+
+.bracelet {
+    max-width: 272px;
+    max-height: 440px;
 }
