--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     background-position: center;
     width: 100%;
     height: 637px;
+    margin-bottom: 77px;
 }
 
 .nav {
@@ -76,6 +77,7 @@ body {
 .woman-image {
     max-width: 682px;
     max-height: 737px;
+    z-index: 1;
 }
 
 .necklace {
@@ -83,11 +85,13 @@ body {
     max-height: 246px;
     margin-left: -80px;
     text-align: right;
+    z-index: 2;
 }
 
 .bracelet {
     max-width: 272px;
     max-height: 440px;
+    z-index: 1;
 }
 
 .product-name {
@@ -102,4 +106,18 @@ body {
     font-weight: 300;
     line-height: 20%;
     text-decoration: underline;
+}
+
+.big-circle {
+    margin-left: 145px;
+    z-index: 2;
+    position: absolute;
+    margin-top: -120px;
+}
+
+.small-circle {
+    margin-left: 927px;
+    z-index: 2;
+    position: absolute;
+    margin-top: 71px;
 }
